MDEV-8159 InnoDB: Failing assertion: key_state->key_id

to simplify various checks, set crypt_data->key_id even
for not encrypted tablespaces